tests/baselines/reference/compoundAdditionAssignmentLHSCannotBeAssigned.errors.txt
==== tests/cases/compiler/compoundAdditionAssignmentLHSCannotBeAssigned.ts (5 errors) ====
    // string can add every type, and result string cannot be assigned to below types
    enum E { a, b, c }
    
    var x1: boolean;
    x1 += '';
    ~~
!!! error TS2011: Cannot convert 'string' to 'boolean'.
    
    var x2: number;
    x2 += '';
    ~~
!!! error TS2011: Cannot convert 'string' to 'number'.
    
    var x3: E;
    x3 += '';
    ~~
!!! error TS2011: Cannot convert 'string' to 'number'.
    
    var x4: {a: string};
    x4 += '';
    ~~
!!! error TS2012: Cannot convert 'string' to '{ a: string; }':
!!! 	Type 'String' is missing property 'a' from type '{ a: string; }'.
    
    var x5: void;
    x5 += '';
    ~~
!!! error TS2011: Cannot convert 'string' to 'void'.